[gd_scene load_steps=4 format=3 uid="uid://bwg7srbssmu0d"]

[ext_resource type="Script" uid="uid://piyisi5o6pl3" path="res://actors/rope_segment.gd" id="1_sx3as"]

[sub_resource type="BoxMesh" id="BoxMesh_m1a7w"]
size = Vector3(0.05, 0.05, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sx3as"]
radius = 0.0695017
height = 1.07813

[node name="RopeSegment" type="RigidBody3D"]
collision_layer = 4
collision_mask = 2
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1_sx3as")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_m1a7w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_sx3as")

[node name="RopeFront" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="RopeEnd" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
